force-app/main/default/objects/Adventure_Step__c/Adventure_Step__c.object-meta.xml
<CustomObject>
    <label>Adventure Step</label>
    <nameField>
        <label>Adventure Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adventure Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>