force-app/main/default/objects/Adventure_Step__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>Number_of_Tasks__c =  Number_of_Completed_Tasks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>