force-app/main/default/objects/Adventure_Step__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This is the description of the Adventure Step that will be displayed under the Subtitle</description>
    <inlineHelpText>This is the description of the Adventure Step that will be displayed under the Subtitle</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>