force-app/main/default/objects/Adventure_Step__c/fields/Icon_Image__c.field-meta.xml
<CustomField>
    <fullName>Icon_Image__c</fullName>
    <description>The URL for the icon image</description>
    <inlineHelpText>This field should contain a URL for the Adventure step icon image</inlineHelpText>
    <label>Icon Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>