force-app/main/default/objects/Adventure_Step__c/fields/Number_of_Completed_Modules__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Modules__c</fullName>
    <label>Number of Completed Modules</label>
    <summaryFilterItems>
        <field>Step_Module__c.Completed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Step_Module__c.Adventure_Step__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>