force-app/main/default/objects/Adventure_Step__c/fields/Number_of_Step_Modules__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Step_Modules__c</fullName>
    <description>Total number of Step Modules in this Adventure Step</description>
    <inlineHelpText>Total number of Step Modules in this Adventure Step</inlineHelpText>
    <label>Number of Step Modules</label>
    <summaryForeignKey>Step_Module__c.Adventure_Step__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>