force-app/main/default/objects/Adventure_Step__c/fields/Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks__c</fullName>
    <label>Number of Tasks</label>
    <summarizedField>Step_Module__c.Number_of_Tasks__c</summarizedField>
    <summaryForeignKey>Step_Module__c.Adventure_Step__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>