force-app/main/default/objects/Adventure_Step__c/fields/Task_Progress__c.field-meta.xml
<CustomField>
    <fullName>Task_Progress__c</fullName>
    <formula>Number_of_Completed_Tasks__c  /  Number_of_Tasks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Task Progress</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>