force-app/main/default/objects/Adventure_Step__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title of the Adventure Step</description>
    <inlineHelpText>This is the title that will be displayed in the map for this Adventure Step</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>